Enabling push to RealTime tables